[package]
name = "netns-rs"
version = "0.2.0"
description = "A library to handle Linux network namespaces in Rust"
keywords = ["network", "namespaces", "linux", "container"]
authors = ["Alibaba Dragonball Team", "Wang Lei <wllenyj@gmail.com>"]
repository = "https://github.com/wllenyj/netns-rs.git"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
nix = { version = "0.29", features = ["mount", "sched"] }
thiserror = "1.0.30"
